# gitlab-cd-example

./: .gitlab-ci.yml  Makefile  pyproject.toml  tox.ini
gitlab_cd_example/: __init__.py
tests/: test_example.py
